--- a/src/views/components/task-view-header/task-view-header.scss
+++ b/src/views/components/task-view-header/task-view-header.scss
@@ -44,11 +44,14 @@
 
   .action-button {
     margin: 0.5em 0.3em;
-    padding: 1.4em 0.7em;
+    height: 3em;
     display: flex;
     align-content: center;
     justify-content: center;
     font-size: 12px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
 
     .delete {
       vertical-align: sub;
